# Klein

./: CMakeLists.txt  README.md  main.cpp
Engine/LogSystem/: Logger.cpp  Logger.h
Engine/include/: App.h  AssetManager.h  Components.h  DebugPanel.cpp  DebugPanel.h  EntryPoint.h  Mesh.h  Renderer.h  Shader.h
Engine/src/App/: App.cpp
Engine/src/Scene/: Scene.cpp
Engine/src/Window/: Window.cpp
Old_Engine/include/: App.h  Entity.h  Klein.h  Scene.h  Window.h
Old_Engine/src/: Mesh.cpp  Renderer.cpp
Old_Engine/src/App/: App.cpp
Old_Engine/src/AssetManager/: AssetManager.cpp
Old_Engine/src/Component/: Components.cpp
